--- a/assets/src/app/committees/index.tpl.html
+++ b/assets/src/app/committees/index.tpl.html
@@ -45,7 +45,7 @@
 <md-divider ></md-divider>
 <br><br>
 <div ng-click="loadMore()" style="text-align:center">
-  <button class="btn btn-default col-xs-10 col-xs-offset-1">LOAD MORE</button>
+  <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE</button>
 </div>
 
 <div style="height:100px;"></div>
