--- a/assets/src/app/vote/index.tpl.html
+++ b/assets/src/app/vote/index.tpl.html
@@ -1,14 +1,23 @@
 <div ui-view="vote">
 
 	<div class="voteContainer container">
-		<h3>{{vote.voteCount}} - {{vote.title}}</h3>
-		<h3>{{vote.plusCount}} - {{vote.minusCount}}</h3>
-		<!--<h3>{{vote.otherCount}}</h3>-->
-		<button class="btn btn-default" ng-click="createVote(1)"><i class="fa fa-caret-up"></i></button>
-        <button class="btn btn-default" ng-click="createVote(-1)"><i class="fa fa-caret-down"></i></button>
+
+		<h3>
+			{{vote.voteCount}} ({{vote.plusCount-vote.minusCount}}) - 
+			<!--<button class="btn btn-default" ng-click="createVote(1)"><i class="fa fa-caret-up"></i> {{vote.plusCount}}</button>
+        	<button class="btn btn-default" ng-click="createVote(-1)"><i class="fa fa-caret-down"></i> {{vote.minusCount}}</button>-->
+			{{vote.title}}
+		</h3>
 		<h4><a href="bill/{{vote.bill.id}}/{{vote.bill.urlTitle}}">{{vote.bill.title}}</a></h4>
+
+		<!--<h3>{{vote.otherCount}}</h3>-->
 		<md-divider></md-divider>
-		<br>
+		<div class="row">
+			<button class="col-xs-6 btn btn-default" ng-click="createVote(1)"><i class="fa fa-caret-up"></i> {{vote.plusCount}}</button>
+        	<button class="col-xs-6 btn btn-default" ng-click="createVote(-1)"><i class="fa fa-caret-down"></i> {{vote.minusCount}}</button>
+    	</div>
+    	<br>
+
 		<!--UI/UX - break out into YES / NO - show representative votes -->
 		<uib-tabset>
 			<uib-tab heading="{{vote.plusCount}}  Yes" active="active">
