--- a/assets/src/app/member/index.tpl.html
+++ b/assets/src/app/member/index.tpl.html
@@ -77,10 +77,10 @@
 	      <a ng-show="member.socialAccounts.twitter.profileUrl" href="{{member.socialAccounts.twitter.profileUrl}}">twitter</a>
 	      <a ng-show="member.socialAccounts.google.profileUrl" href="{{member.socialAccounts.google.profileUrl}}">google</a>
 
-	      <p ng-show="member.phone">{{member.phone}}</p>
-	      <p ng-show="member.fax">{{member.fax}}</p>
-	      <!--<p ng-show="member.email">{{member.email}}</p>-->
-
+	      <h5 ng-show="member.phone">phone: {{member.phone}}</h5>
+	      <h5 ng-show="member.fax">fax: {{member.fax}}</h5>
+	      <h5 ng-show="member.email">email: {{member.email}}</h5>
+	      <button class="btn btn-default">contact</button>
 
 	      <!--<button class="btn btn-default">follow</button><br>-->
 	      <br>
@@ -96,8 +96,6 @@
 	      <div ng-show="currentUser.id == member.id">
 			<a href="/account"><button class="btn btn-default">settings</button></a>
 		  </div>
-		   <br>
-	       <button class="btn btn-default">contact</button>
 	       <br>
 	       <br>
 	    </div>
