--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -121,5 +121,10 @@
     <script type="text/javascript" src="/templates.js"></script>
     <!--TEMPLATES END-->
 
+    <!--CDN START-->
+    <!--<script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>-->
+    <!--CDN END-->
+
+
 </body>
 </html>
