--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -20,6 +20,7 @@
         <link rel="stylesheet" href="/styles/css/responsive.css">
         <link rel="stylesheet" href="/styles/css/theme.css">
         <link rel="stylesheet" href="/bower_components/angular-material/angular-material.css">
+        <link rel="stylesheet" href="/bower_components/angular-google-places-autocomplete/src/autocomplete.css">
         <!--STYLES END-->
 
         <!--FONTS-->
@@ -82,6 +83,7 @@
     <script src="/bower_components/angular-aria/angular-aria.min.js"></script>
     <script src="/bower_components/angular-material/angular-material.js"></script>
     <script src="/bower_components/ng-file-upload/ng-file-upload.min.js"></script>
+    <script src="/bower_components/angular-google-places-autocomplete/src/autocomplete.js"></script>
     <script src="/src/app/about/index.js"></script>
     <script src="/src/app/account/index.js"></script>
     <script src="/src/app/app.js"></script>
@@ -122,7 +124,7 @@
     <!--TEMPLATES END-->
 
     <!--CDN START-->
-    <!--<script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>-->
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
     <!--CDN END-->
 
 
