--- a/assets/src/app/member/index.tpl.html
+++ b/assets/src/app/member/index.tpl.html
@@ -79,7 +79,7 @@
 
 	      <h5 ng-show="member.phone">phone: {{member.phone}}</h5>
 	      <h5 ng-show="member.fax">fax: {{member.fax}}</h5>
-	      <h5 ng-show="member.email">email: {{member.email}}</h5>
+	      <!--<h5 ng-show="member.email">email: {{member.email}}</h5>-->
 	      <button class="btn btn-default">contact</button>
 
 	      <!--<button class="btn btn-default">follow</button><br>-->
