--- a/assets/styles/css/theme.css
+++ b/assets/styles/css/theme.css
@@ -24,12 +24,137 @@ body {
     min-height: 100%
 }
 
+.spacing-5 {
+    padding: 5px;
+}
+
+.spacing-10 {
+    padding: 10px;
+}
+
+.spacing-15 {
+    padding: 15px;
+}
+
+.spacing-25 {
+    padding: 25px;
+}
+
+.spacing-50 {
+    padding: 50px;
+}
+
+.spacing-75 {
+    padding: 75px;
+}
+
+.spacing-100 {
+    padding: 100px;
+}
+
+.spacing-125 {
+    padding: 125px;
+}
+
+.spacing-150 {
+    padding: 150px;
+}
+
+.spacing-200 {
+    padding: 200px;
+}
+
+.spacing-250 {
+    padding: 250px;
+}
+
+.margin-5 {
+    margin: 5px;
+}
+
+.margin-10 {
+    margin: 10px;
+}
+
+.margin-15 {
+    margin: 15px;
+}
+
+.margin-25 {
+    margin: 25px;
+}
+
+.margin-50 {
+    margin: 50px;
+}
+
+.margin-75 {
+    margin: 75px;
+}
+
+.margin-100 {
+    margin: 100px;
+}
+
+.margin-125 {
+    margin: 125px;
+}
+
+.margin-150 {
+    margin: 150px;
+}
+
+.margin-200 {
+    margin: 200px;
+}
+
+.margin-250 {
+    margin: 250px;
+}
+
+.margin-auto {
+    margin: 0 auto;
+}
+
+.margin-0 {
+  margin:0;
+}
+
+md-card > :not(md-card-content) img {
+    max-height: 280px!important;
+    max-width: 100%!important;
+    width: auto!important;
+    margin: 0 auto;
+    margin-top: 15px;
+}
+
+md-card > :not(md-card-content) .postImg {
+  display: inline-block!important;
+  max-width: 100px!important;
+}
+
 .light {
   font-weight: 100
 }
 
 .vBlue {
   color:#2ab996;
+}
+
+.subtitle {
+  color: #999999;
+}
+
+.text-center {
+  text-align: center !important;
+}
+
+.text-left {
+  text-align: left !important;
+}
+
+.text-right {
+  text-align: right !important;
 }
 
 .footer {
@@ -66,28 +191,40 @@ hr {
   border-top: 1px solid #2AB996;
 }
 
+.red-color {
+  color:red;
+}
+
 .upVote:hover{
-  color:white;
+  color:white!important;
   background-color:#2ab996;
 }
 .downVote:hover{
-  color:white;
+  color:white!important;
   background-color:red;
 }
-.upVoted{
+.upVote:hover i, 
+.downVote:hover i {
   color:white;
+}
+.upVoted i, 
+.downVoted i {
+  color:white;
+}
+.upVoted{
+  color:white!important;
   background-color:#2ab996;
 }
 .downVoted{
-  color:white;
+  color:white!important;
   background-color:red;
 }
 .upVoted:focus{
-  color:white;
+  color:white!important;
   background-color:#2ab996;
 }
 .downVoted:focus{
-  color:white;
+  color:white!important;
   background-color:red;
 }
 
