--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -262,7 +262,7 @@
         <div class='md-padding' layout="row" layout-align="center" layout-wrap>
           <md-card flex="20" ng-repeat="user in users">
             <a href="/member/{{user.username}}">
-              <img ng-src="{{user.avatarUrl}}" class="md-card-image" alt="{{user.username}}">
+              <img ng-src="{{user.avatarUrl}}" err-src="/images/avatar.png" class="md-card-image" alt="{{user.username}}">
             </a>
             <md-card-title>
               <md-card-title-text>
