--- a/assets/src/app/member/index.tpl.html
+++ b/assets/src/app/member/index.tpl.html
@@ -3,7 +3,7 @@
 	  <div class="profile-user-page card">
 	    <div class="img-user-profile">
 	      <div style="height:25em;width: 100%;overflow: hidden;">
-	      	<img class="profile-bgHome" src="{{member.coverUrl}}" />
+	      	<img class="profile-bgHome" src="{{member.coverUrl}}" err-src="/images/avatar.png" />
 	      </div>
 		  <!--
 		  <ul class="data-user">
