--- a/assets/styles/css/member.css
+++ b/assets/styles/css/member.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Quicksand:300,400|Lato:400,300|Coda|Open+Sans);
+@import url(https://fonts.googleapis.com/css?family=Quicksand:300,400|Lato:400,300|Coda|Open+Sans);
 
 .content-profile-page {
   margin: 1em auto;
