--- a/assets/styles/css/theme.css
+++ b/assets/styles/css/theme.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Jura:300,400,600');
-@import "http://fonts.googleapis.com/css?family=Cantarell";
+@import "https://fonts.googleapis.com/css?family=Cantarell";
 
 html, body {
   height:100%;
