--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -1,35 +1,60 @@
 <!--if logged in-->
 <div ng-show="currentUser">
-  <div class="spacing-50"></div>
+  <div class="spacing-25"></div>
   <div class="container">
     <div class="row">
       <div class="col-md-4">
         <img class="avatar" style="margin-top:0em" src="{{currentUser.avatarUrl}}"/>
         <h2><a href="/member/{{currentUser.username}}"><b>{{currentUser.username}}</a></b></h2>
         <div class="spacing-5"></div>
-        <h5><b class="vBlue">Representatives</b> - <b>{{representatives.length}}</b></h5>
-        <h5><b class="vBlue">Constituents</b> - <b>{{constituents.length}}</b></h5>
-        <h5><b class="vBlue">Votes</b> - <b>{{votes.length}}</b></h5>
+        <h5>Representatives - {{representatives.length}}</h5>
+        <h5>Constituents - {{constituents.length}}</h5>
+        <h5>Votes - {{votes.length}}</h5>
         <div class="spacing-25"></div>
+        <p>activity</p>
+        <p>reccomended votes</p>
+        <p>message</p>
+        <!--activity, recommended votes-->
       </div>
       <div class="col-md-8">
         <div class="alert alert-success verificationNotice spacing-25" ng-show="!currentUser.isVerified">
           <h2>Become Verified!</h2>
           <hr>
-            <div class="spacing-15">
-              <h4><b>Official ID</b></h4>
-              <div class="spacing-10"></div>
-              <p>By providing official identification, government officials have more of an incentive to respond and your voice carries more weight.</p>
-              <div class="spacing-10"></div>
-              <button class="btn btn-default"><i class="fa fa-upload"></i> Upload</button>
-              <div class="spacing-25"></div>
-              <h4><b>Official Address</b></h4>
-              <div class="spacing-10"></div>
-              <md-input-container class="md-block">
-                <textarea g-places-autocomplete ng-model="address" rows="5" md-select-on-focus aria-label="address" placeholder="+ Add Location"></textarea>
-              </md-input-container>
+          <div class="spacing-15">
+            <h4><b>Official ID</b></h4>
+            <div class="spacing-10"></div>
+            <p>By providing official identification, government officials have more of an incentive to respond and your voice carries more weight.</p>
+            <div class="spacing-10"></div>
+            <button class="btn btn-default"><i class="fa fa-upload"></i> Upload</button>
+            <div class="spacing-25"></div>
+            <h4><b>Official Address</b></h4>
+            <div class="spacing-10"></div>
+            <md-input-container class="md-block">
+              <textarea g-places-autocomplete ng-model="address" rows="5" md-select-on-focus aria-label="address" placeholder="+ Add Location"></textarea>
+            </md-input-container>
+            <div class="spacing-10"></div>
+            <h4><b>Your Representatives</b></h4>
+            <md-divider></md-divider>
+            <div class="spacing-10"></div>
+            <button ng-hide="officialRepresentatives.length > 0 || gettingRepresentatives" ng-click="getLatLng()" class="btn btn-default btn-lg"><i class="fa fa-map-marker"></i> Find Your Reps</button>
+            <i ng-show="gettingRepresentatives" style="font-size:48px" class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
+            <!--<div ng-show="gettingRepresentatives" class="loader loaderSquare"></div>-->
+            <div class='md-padding' layout="row" layout-align="center" layout-wrap>
+              <md-card flex="20" ng-repeat="user in officialRepresentatives">
+                <a href="/member/{{user.username}}">
+                  <img ng-src="{{user.avatarUrl}}" class="md-card-image" alt="{{user.username}}">
+                </a>
+                <md-card-title class="text-center" style="padding:15px 0">
+                  <md-card-title-text>
+                    <a href="/member/{{user.username}}">{{user.username}}</a>
+                    <!--<button class="btn btn-green">select as representative</button>-->
+                  </md-card-title-text>
+                </md-card-title>
+              </md-card>
             </div>
+          </div>
         </div>
+
         <!--
         <h3>my constituents</h3>
         <md-divider></md-divider>
@@ -65,69 +90,35 @@
           </md-card-title>
         </md-card>
         -->
-      </div>
-    </div>
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="spacing-25"></div>
-      <div class="col-md-7">
-        <h4><b>Your Representatives</b></h4>
-        <hr>
+      
         <div class="spacing-5"></div>
-        <button ng-hide="officialRepresentatives.length > 0 || gettingRepresentatives" ng-click="getLatLng()" class="btn btn-default btn-lg"><i class="fa fa-map-marker"></i> Local Reps</button>
-        <i ng-show="gettingRepresentatives" style="font-size:48px" class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
-        <!--<div ng-show="gettingRepresentatives" class="loader loaderSquare"></div>-->
-        <div class='md-padding' layout="row" layout-align="center" layout-wrap>
-          <md-card class="col-md-4" ng-repeat="user in officialRepresentatives">
-            <a href="/member/{{user.username}}">
-              <img ng-src="{{user.avatarUrl}}" class="md-card-image" alt="{{user.username}}">
-            </a>
-            <md-card-title class="text-center" style="padding:15px 0">
-              <md-card-title-text>
-                <a href="/member/{{user.username}}">{{user.username}}</a>
-                <!--<button class="btn btn-green">select as representative</button>-->
-              </md-card-title-text>
-            </md-card-title>
-          </md-card>
-        </div>
-        <div class="spacing-25"></div>
-        <h4><b>Submit Post</b></h4>
-        <hr>
-        <div class="spacing-15"></div>
         <div class="profilePost">
           <form role="form">
             <md-input-container class="md-block">
-              <textarea ng-model="newPost.post" md-maxlength="150" rows="5" md-select-on-focus aria-label="new post" placeholder="+ Add Text"></textarea>
+              <textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder=""></textarea>
             </md-input-container>
             <!--connect legislators-->
           </form>
           <button ng-click="createPost()" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
         </div>
-        <div class="spacing-25"></div>
-        <h4><b>Your Posts</b></h4>
-        <hr>
-        <div class="spacing-15"></div>
-        <md-card ng-repeat="post in posts" class="col-md-6 margin-25">
+        <div class="spacing-5"></div>
+
+        <md-card ng-repeat="post in posts">
           <md-card-title>
             <md-card-title-text>
-              <a href="member/{{post.user.username}}" class="text-left">
-                <img ng-src="{{post.user.avatarUrl}}" class="postImg" alt="{{post.user.username}}">
+              <a href="member/{{post.user.username}}">
+                <img style="max-width:64px" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
+                {{post.user.username}}
               </a>
-              <div class="margin-5"></div>
-              <span class="subtitle">User:</span>
-              <a href="member/{{post.user.username}}" class="text-left">{{post.user.username}}</a>
-              <div class="margin-10"></div>
-              <span class="subtitle">Text:</span>
               <p>{{post.post}}</p>
             </md-card-title-text>
           </md-card-title>
         </md-card>
-      </div>
-      <div class="col-md-5">
-        <h4><b>Recommended Votes</b></h4>
-        <hr>
+
         <div class="spacing-15"></div>
+        <h3>trending votes</h3>
+        <md-divider></md-divider>
+        <div class="spacing-5"></div>
         <md-card ng-repeat="vote in votes">
           <md-card-title>
             <md-card-title-text>
@@ -152,12 +143,14 @@
         </md-card>
         <br><br>
         <div ng-click="loadMoreVotes()" style="text-align:center">
-          <button class="btn btn-default col-xs-10 col-xs-offset-1">load more</button>
+          <button class="btn btn-default col-xs-10 col-xs-offset-1">more</button>
         </div>
+        <div class="spacing-50"></div>
+
+
       </div>
     </div>
   </div>
-  <div class="spacing-50"></div>
 </div>
 <!--/if logged in-->
 
@@ -182,9 +175,9 @@
         <!--<p>with direct input on policy your voice matters</p>-->
 
         <p>contact your reps by mail, fax, and email with a single click</p>
-        <i class="fa fa-envelope-o" aria-hidden="true"></i>
+        <!--<i class="fa fa-envelope-o" aria-hidden="true"></i>
         <i class="fa fa-print" aria-hidden="true"></i>
-        <i class="fa fa-files-o" aria-hidden="true"></i>
+        <i class="fa fa-files-o" aria-hidden="true"></i>-->
         <p>tell them how you feel about specifc legislation</p>
 
         <!--<p>with continual open ballot elections - represent others at anytime</p>-->
@@ -276,6 +269,7 @@
           </md-card>
         </div>
 
+        <!--
         <h3>message your reps</h3>
         <i class="fa fa-envelope-o" aria-hidden="true"></i>
         <i class="fa fa-print" aria-hidden="true"></i>
@@ -283,6 +277,7 @@
         <md-input-container class="md-block">
           <textarea ng-model="message" md-maxlength="150" rows="5" md-select-on-focus aria-label="new post"></textarea>
         </md-input-container>
+        -->
 
         <div class='md-padding' layout="row" layout-align="center" layout-wrap>
           <md-card flex="20" ng-repeat="user in users">
