--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -104,6 +104,7 @@
     <script src="/src/common/models/bill.js"></script>
     <script src="/src/common/models/comment.js"></script>
     <script src="/src/common/models/committee.js"></script>
+    <script src="/src/common/models/committeeMember.js"></script>
     <script src="/src/common/models/follower.js"></script>
     <script src="/src/common/models/index.js"></script>
     <script src="/src/common/models/post.js"></script>
