--- a/assets/src/app/member/index.tpl.html
+++ b/assets/src/app/member/index.tpl.html
@@ -16,6 +16,7 @@
 						<a href="/committee/{{committee.committee.urlTitle}}/">{{committee.committee.title}}</a>
 					</md-card-title-text>
 				</md-card>
+			</uib-tab>
 			<uib-tab heading="Constituents">
 				<md-card ng-repeat="constituent in constituents">
 					<md-card-title-text>
