--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -172,15 +172,16 @@
         <i style="font-size:256px;" class="fa fa-bullhorn"></i>
         <md-divider></md-divider>
         <h4>be part of the movement</h4>
-        <!--<p>directly impact the political landscape, with input on policy your voice counts</p>-->
         <h4>direct your impact though input on policy</h4>
         <p>directly impact the creation of policy</p>
+        <p>contact your reps and tell them your opinion about legislation</p>
+
+        <!--<p>directly impact the political landscape, with input on policy your voice counts</p>-->
         <!--<p>with direct input on policy your voice matters</p>-->
-        <p>contact your reps</p>
-        <p>tell them how you feel about specifc legislation</p>
-
+        <!--generate a network of reprensentatives for the people-->
+        <!--rep others to their reps-->
+        
         <!--organizing a coalition of reps for reps-->
-
         <!--<p>with continual open ballot elections - represent others at anytime</p>-->
 
         <md-divider></md-divider>
