--- a/assets/src/app/committee/members.tpl.html
+++ b/assets/src/app/committee/members.tpl.html
@@ -29,6 +29,7 @@
           <h3>{{member.user.username}}</h3>
         </a>
         <h4>{{member.title}}</h4>
+        <button class="btn btn-primary">follow</button>
         <button class="btn btn-primary">select as representative</button>
         <!--number of reps?-->
       </md-card-title-text>
