--- a/assets/src/app/bill/index.tpl.html
+++ b/assets/src/app/bill/index.tpl.html
@@ -14,11 +14,9 @@
 					<br>
 					<p>{{bill.billContent.current_status_description}}</p>
 					<p>{{bill.billContent.current_status_label}}</p>
-
-					<p>{{bill.summary}}</p><br><br>
+					<p>{{bill.summary}}</p>
 					
-					<p>{{bill.summaryShort}}</p>
-
+					<!--<p>{{bill.summaryShort}}</p>-->
 					<!--<p class="lead">{{bill.billContent.display_number}}</p>-->
 					<!--<p class="lead">{{bill.billContent.introduced_date}}</p>-->
 					<!--<p class="lead">{{bill.billContent.is_alive}}</p>-->
