--- a/assets/src/app/committee/home.tpl.html
+++ b/assets/src/app/committee/home.tpl.html
@@ -80,7 +80,7 @@
     </uib-tab>
     <uib-tab heading="Discussion">
     </uib-tab>
-    <uib-tab heading="Members">
+    <uib-tab heading="Members" ng-click="goToPath('members')">
     </uib-tab>
     <uib-tab heading="Votes">
     </uib-tab>
